added localstorage and some fixs

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-mvcbackboneVideoclub
-====================
-
-MVP app usign backbone, require-js, underscore and handlebars
+.hidden {
+    display: none;
+}
