--- a/templates/movie/movieCollection.html
+++ b/templates/movie/movieCollection.html
@@ -2,7 +2,7 @@
 <h3>Listado de peliculas</h3>
 <hr />
 <a href="#movies/new" class="btn btn-primary">Nueva</a>
-<div id="filter"><label>Genero:</label></div>
+<!--<div id="filter"><label>Genero:</label></div>-->
 <table class="table table-striped">
   <thead>
     <tr>
