--- a/templates/movie/movieCollection.html
+++ b/templates/movie/movieCollection.html
@@ -20,5 +20,9 @@
       <th width="15%">-</th>
     </tr>
   </thead>
-  <tbody id="list-container"></tbody>
+  <tbody class="list-container">
+    <tr>
+      <td colspan="4">Obteniendo peliculas...</td>
+    </tr>
+  </tbody>
 </table>
