--- a/templates/movie/movieForm.html
+++ b/templates/movie/movieForm.html
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 	<% if (model) { %>
-	<input type="hidden" name="id" value="<%= model.id %>" required />
+	<input type="hidden" name="_id" value="<%= model.id %>" required />
 	<% } %>
 	<div class="form-actions">
 		<button type="submit" class="btn btn-primary save">Guardar</button>
