Implements Model.fetch

--- a/templates/movie/movieCollection.html
+++ b/templates/movie/movieCollection.html
@@ -5,7 +5,7 @@
 <!--<div id="filter"><label>Genero:</label></div>-->
 <div class="input-append">
   <input type="text" class="input-xlarge search" placeholder="Buscar peliculas por titulo" />
-  <button class="btn" type="button doSearch">Buscar!</button>
+  <button type="button" class="btn doSearch">Buscar!</button>
 </div>
 <div class="input-prepend">
 	<span class="add-on">Genero</span>
