--- a/templates/movie/movie.html
+++ b/templates/movie/movie.html
@@ -2,7 +2,7 @@
 <dl class="dl-horizontal">
   <dt>Genero</dt>
   <dd><%= model.get('genre') %></dd>
-  <dt>a&ntilde;o</dt>
+  <dt>A&ntilde;o</dt>
   <dd><%= model.get('year') %></dd>
   <dt>Rating</dt>
   <dd><%= model.get('rating') %></dd>
