--- a/templates/movie/movieCollection.html
+++ b/templates/movie/movieCollection.html
@@ -11,6 +11,9 @@
 	<span class="add-on">Genero</span>
   <select class="input genre"></select>
 </div>
+
+<div class="pagination-container"></div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -26,4 +29,3 @@
     </tr>
   </tbody>
 </table>
-<div id="paginacion"></div>
