Remove tr loading

--- a/templates/movie/movieCollection.html
+++ b/templates/movie/movieCollection.html
@@ -22,9 +22,5 @@
       <th width="15%">-</th>
     </tr>
   </thead>
-  <tbody class="list-container">
-    <tr>
-      <td colspan="4">Obteniendo peliculas...</td>
-    </tr>
-  </tbody>
+  <tbody class="list-container"></tbody>
 </table>
