--- a/templates/users/collection.html
+++ b/templates/users/collection.html
@@ -8,7 +8,11 @@
 </div>
 <div class="input-prepend">
 	<span class="add-on">Nivel</span>
-  <select class="input genre"></select>
+  <select class="input level">
+    <option value="">Indistinto</option>
+    <option value="admin">Administrador</option>
+    <option value="client">Cliente</option>
+  </select>
 </div>
 
 <div class="pagination-container"></div>
