--- a/templates/movies/detail.html
+++ b/templates/movies/detail.html
@@ -11,4 +11,4 @@
   <dd><img src="<%= model.get('poster') %>" /></dd>
   <% } %>
 </dl>
-<a href="#" class="btn">Volver a la lista</a>
+<a href="#movies" class="btn">Volver a la lista</a>
