--- a/templates/movies/form.html
+++ b/templates/movies/form.html
@@ -42,7 +42,7 @@
 	<input type="hidden" name="_id" value="<%= model.id %>" required />
 	<% } %>
 	<div class="form-actions">
-		<a href="#" class="btn">Cancelar</a>
+		<a href="#movies" class="btn">Cancelar</a>
 		<button type="submit" class="btn btn-primary save">Guardar</button>
 	</div>
 </form>
