--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
-<div class="centrado">
-	<h3>BENVENUTO!!</h3>
-  <a class="btn btn-primary btn-large boton" href="#users">Users</a>
-  <a class="btn btn-primary btn-large boton" href="#movies">Movies</a>
+<div class="navbar">
+	<div class="navbar-inner">
+		<ul class="nav">
+		  <li><a class="users" href="#users">Users</a></li>
+		  <li><a class="movies" href="#movies">Movies</a></li>
+		</ul>
+	</div>
 </div>
-
 
