--- a/public/app/modules/usersRels/views/templates/layout.html
+++ b/public/app/modules/usersRels/views/templates/layout.html
@@ -1,10 +1,8 @@
-<h3>Listado de peliculas</h3>
+<h3>Usuarios relacionados</h3>
 <hr />
-<a href="#movies/new" class="btn btn-primary">Nueva</a><br /><br />
 <div class="input-append">
 	<input type="text" class="input-xlarge search" placeholder="Buscar peliculas por titulo" />
 	<button type="button" class="btn doSearch">Buscar!</button>
 </div>
-
 <div class="pagination-container"></div>
 <div class="collection-container"></div>
