Fixing active current tab

--- a/public/app/modules/modal/views/templates/liItem.html
+++ b/public/app/modules/modal/views/templates/liItem.html
@@ -1,7 +1,5 @@
-<ul>
-  <% _.each(items, function(item){ %>
-  <li>
+  <% _.each(items, function(item, key){ %>
+  <li class="<%= key ==0? 'active': ''%>">
   	<a href="#<%= item.title %>" data-toggle="tab"><%= item.title %></a>
   </li>
   <% }); %>
-</ul>
