--- a/public/app/modules/movies/views/templates/detail.html
+++ b/public/app/modules/movies/views/templates/detail.html
@@ -11,4 +11,4 @@
 	  <dd><img src="<%= poster %>" /></dd>
   <% } %>
 </dl>
-<a href="#movies" class="btn">Volver a la lista</a>
+<!-- <a href="#movies" class="btn">Volver a la lista</a> -->
