--- a/public/app/modules/movies/views/templates/collectionItem.html
+++ b/public/app/modules/movies/views/templates/collectionItem.html
@@ -7,7 +7,7 @@
 <td><%= genre %></td>
 <td><%= rating %></td>
 <td>
-	<button class="btn btn-small btn-info info" title="+Info" value="<%= _id %>"><a href="#myModal" data-toggle="modal" class="icon-white icon-info-sign"></a></button>
+	<button class="btn btn-small btn-info info" title="+Info" value="<%= _id %>"><a class="icon-white icon-info-sign"></a></button>
 	<a class="btn btn-small btn-warning" title="Editar" href="#movies/edit/<%= _id %>"><i class="icon-white icon-edit"></i></a>
 	<button class="btn btn-small btn-danger remove" title="Eliminar" value="<%= _id %>"><i class="icon-white icon-remove"></i></button>
 </td>
